@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.519 2007/06/26 11:16:54 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.520 2007/06/27 11:01:51 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -73,6 +73,8 @@ PH/12 Added +ignore_defer and +include_defer to host lists.
 
 PH/13 Installed PCRE version 7.2. This needed some changes because of the new
       way in which PCRE > 7.0 is built.
+
+PH/14 Implemented queue_only_load_latch.
 
 
 Exim version 4.67
